explison wave added